--- a/client/public/style.css
+++ b/client/public/style.css
@@ -5,10 +5,19 @@
 body {
     background: #cca264;
 }
+
+.moveRight {
+    float: right;
+    width: 40vw;
+    margin-top: -200px;
+    max-height: 300px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
 .container-fluid {
     background:white;
     max-width:800px;
-    min-width:500px;
     margin:60px auto;
     border:1px solid #a195a6;
     border-radius:25px;
@@ -24,34 +33,31 @@ body {
     padding-bottom:15px;
     border-bottom:1px dotted #333;
 }
+
 #root form {
     font-size: 18px;
 }
+
 #root input, textarea {
     padding:10px;
     margin:10px;
     font-size:18px;
 }
+
 textarea {
     max-height:200px;
-    width:90%;
-    min-width:500px;
     border-radius:5px;
     border-color:#ccc;
 }
+
 h1 {
     padding-top:40px !important;;
 }
+
 button {
     font-size:18px;
     padding:10px;
     margin:60px 10px;
     margin-top:0px;
-}
-
-h1::before {
-    content: "";
-    clear: both;
-    display: table;
 }
 
